# ci-cd-template

./: .env.example  .pre-commit-config.yaml  CONTRIBUTING.md  Notes.md  README.md  pixi.toml  pyproject.toml
.devcontainer/: devcontainer.json
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: build-dashboard.yml  publish.yml  test.yml  train.yml  validate-data.yml
data/: data.csv
notebooks/: dashboard.py
scripts/: train.py  validate_data.py
src/: model.py  predict.py
src/ci_cd_template/: __init__.py  model.py  predict.py
tests/: test_02_model.py  test_03_e2e.py  test_model.py
