[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ci_cd_template"
version = "0.1.0"
description = "A minimal ML project template with automated testing, training, and publishing."
authors = [{name="Your Name", email="you@example.com"}]
license = {text="MIT"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "pandas",
    "marimo",
    "scikit-learn",
    "joblib"  # optional, for saving/loading models
]

[tool.ruff]
line-length = 88
select = ["E", "F", "W", "I"]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "--maxfail=1 --disable-warnings -q"
testpaths = ["tests"]

[tool.uv]
commands = { 
    test = "pytest",
    lint = "ruff src tests scripts notebooks",
    train = "python scripts/train.py",
    notebook = "jupyter nbconvert --to notebook --execute notebooks/dashboard.py"
}